# wkai

./: .gitignore  README.md  RUNNING.md  WKAI_BUGFIX_PROMPT_V2.md  WKAI_IMPLEMENTATION_CHANGES.md  WKAI_IMPLEMENTATION_PROMPT.md  WKAI_PROJECT_STRUCTURE.md  WKAI_Qwen35_Prompt.md  app.md  changelog.md  green-activity-log.md  render.yaml  run-wkai.bat  run-wkai.sh  stop-wkai.bat  stop-wkai.sh  实施变更说明.md  更新日志.md
.agents/rules/: push.md
.github/workflows/: bump-and-tag-release.yml  release.yml
wkai/: SIGNING_WINDOWS.md  index.html  package-lock.json  package.json  tailwind.config.js
wkai-backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
wkai-backend/src/: app.js  index.js
wkai-backend/src/ai/: errorDiagnosis.js  groqClient.js  langsmith.js  memory.js  pipeline.js  prompts.js  whisper.js
wkai-backend/src/auth/: sessionAccess.js
wkai-backend/src/db/: client.js  migrate.js  redis.js
wkai-backend/src/middleware/: errorHandler.js
wkai-backend/src/routes/: ai.js  (+3 more)
wkai-backend/tests/: agents.contract.test.js
wkai-student/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
wkai-student/src/: index.css  main.tsx  router.tsx
wkai/scripts/: bump-version.mjs  sign-windows-bundle.ps1
wkai/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
wkai/src-tauri/: Cargo.toml  tauri.conf.json
wkai/src-tauri/capabilities/: default.json
wkai/src-tauri/icons/: icon.icns
wkai/src-tauri/src/: ai.rs  audio.rs  capture.rs  file_watcher.rs  lib.rs  main.rs  session.rs
wkai/src-tauri/src/commands/: capture.rs  files.rs  mod.rs  session.rs
(+70 files in other folders)
